force-app/main/default/objects/Explore_Rating__c/Explore_Rating__c.object-meta.xml
<CustomObject>
    <description>Explore Ratings will be the ratings that are used within GDM Explore. This object allows us to build customized ratings, related to a Ratings Scale, and assign who is able to see each Customized Rating within GDM Explore.</description>
    <label>Explore Rating</label>
    <nameField>
        <label>Explore Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Explore Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>