force-app/main/default/objects/Explore_Rating__c/fields/Explore_Rating_Group__c.field-meta.xml
<CustomField>
    <fullName>Explore_Rating_Group__c</fullName>
    <inlineHelpText>This field will allow you to assign an Explore Rating to a group which will be visible within the Ratings Customization Page with GDM Explore. Assigning no Group will simply have that rating shown independently.</inlineHelpText>
    <label>Explore Rating Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>