force-app/main/default/objects/Explore_Rating__c/fields/Explore_Rating_Scale__c.field-meta.xml
<CustomField>
    <fullName>Explore_Rating_Scale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Explore Rating Scale</label>
    <referenceTo>Explore_Rating_Scale__c</referenceTo>
    <relationshipLabel>Explore Ratings</relationshipLabel>
    <relationshipName>Explore_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>