force-app/main/default/objects/Explore_Rating__c/fields/Order_in_Group__c.field-meta.xml
<CustomField>
    <fullName>Order_in_Group__c</fullName>
    <inlineHelpText>IF you have assigned an Explore Rating to an Explore Rating Group, this field will control the order in which that rating will appear in its assigned group. Not Needed if there is no Group assigned. Cannot have the same order number repeated twice for the same group.</inlineHelpText>
    <label>Order in Group</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>