force-app/main/default/objects/Explore_Rating__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <inlineHelpText>This will control who is able to see the rating within the account. There is a checkbox within the Account object (&quot;Product Placement&quot;) that can assign an account to be either a Customer (unchecked) or Product Placement (checked)</inlineHelpText>
    <label>Visibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Product Placement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>