force-app/main/default/objects/Explore_Rating__c/fields/Visible_Name__c.field-meta.xml
<CustomField>
    <fullName>Visible_Name__c</fullName>
    <inlineHelpText>This will control how the rating will be displayed within GDM Explore</inlineHelpText>
    <label>Visible Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>