force-app/main/default/objects/Explore_Rating__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Explore_Rating_Group__c</columns>
    <columns>Order_in_Group__c</columns>
    <columns>Explore_Rating_Scale__c</columns>
    <columns>Visibility__c</columns>
    <columns>Visible_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>